2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(LIBNOSSLAWS): New variable.
	Use it anywhere reference to this lib is made.

2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use variable instead of directly calling tools.
	
2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Add section to build AWS based on project files.
	(gbuild): New target.
	(gclean): Idem.
	(gsetup): Idem.

	* nossl.gpr:
	New version, this version make it possible to develop AWS using
	 the project files from GPS.

	* ssl.gpr:
	New version, this version make it possible to develop AWS using
	 the project files from GPS.

2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.gpr, nossl.gpr:
	Initial revision.

2002-02-28  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* makefile:
	Put ssl.ads into the make process.

2003-02-23  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-thin.ads:
	Fix casing.

2002-02-15  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(CRYPTO_set_mem_functions): New stub routines.

2002-02-04  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(SSL_clear): New routine stub.

2002-02-04  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_clear): New routine binded.

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(clean): Use rm -f to avoid warnings.

2003-01-22  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(ssl-thin): New target.
	(ssl-wrappers): New target.
	(libnosslaws.a): New target.
	Only rebuild libnosslaws.a if necessary, it avoids rebuilding all
	 the demos.

2002-12-25  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* makefile:
	Remove wrappers from .SILENT list.

2002-12-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(build): Rename libsslaws.a to libnosslaws.a.

2002-12-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(wrappers): Removed.
	(build): Build libsslaws.a.

2002-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-thin.ads: